@@ -1,15 +1,14 @@
 package testPackage;
 
 import businessPackage.SearchManager;
-import dataAccessPackage.gymMemberDataAccess.GymMemberDBAccess;
-import dataAccessPackage.gymMemberDataAccess.IGymMemberDA;
+import dataAccessPackage.gymMemberDataAccess.*;
 import modelPackage.GymMember;
 import modelPackage.searchResult.AppointmentSearchResult;
 
 import java.time.LocalDate;
 import java.util.List;
 
-public class TestSearchDA {
+public class TestAppointmentSearchDA {
 
     public static void main(String[] args) {
         SearchManager searchManager = new SearchManager();
@@ -19,11 +18,11 @@ public class TestSearchDA {
             List<GymMember> members = gymMemberDataAccess.getAll();
 
             if (members.isEmpty()) {
-                System.out.println("Aucun membre disponible pour tester la recherche.");
+                System.out.println("Aucun membre disponible pour tester la recherche de rendez-vous.");
                 return;
             }
 
-            GymMember member = members.getFirst();
+            GymMember member = members.get(0);
 
             List<AppointmentSearchResult> results =
                     searchManager.searchAppointmentsByMemberAndDateRange(
@@ -44,23 +43,27 @@ public class TestSearchDA {
             for (AppointmentSearchResult result : results) {
                 System.out.println(
                         result.getAppointmentId()
+                                + " - coach : "
+                                + result.getCoachFirstName()
+                                + " "
+                                + result.getCoachLastName()
                                 + " - "
-                                + result.getAppointmentDate()
+                                + result.getAvailableDate()
                                 + " "
                                 + result.getStartTime()
                                 + " à "
                                 + result.getEndTime()
-                                + " - coach : "
-                                + result.getCoachFullName()
-                                + " - salle : "
-                                + result.getRoomName()
+                                + " - objectif : "
+                                + result.getObjective()
                                 + " - statut : "
                                 + result.getStatus()
+                                + " - salle : "
+                                + result.getRoomName()
                 );
             }
 
         } catch (Exception exception) {
-            System.out.println("Erreur pendant le test SearchDA : " + exception.getMessage());
+            System.out.println("Erreur pendant le test AppointmentSearchDA : " + exception.getMessage());
         }
     }
 }
